# neuralscope

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.cfg
.agent/rules/: rules.md
.github/workflows/: ci.yml  lint.yml
docs/: cli-reference.md  getting-started.md  index.md  mcp-server.md  sdk-reference.md
docs/features/: architecture-validator.md  code-review.md  codebase-qa.md  dependency-graph.md  documentation.md  health-dashboard.md  pr-summary.md  prompt-studio.md  test-generator.md  vulnerability-scan.md
src/neuralscope/: __init__.py
src/neuralscope/cli/: __init__.py  app.py
src/neuralscope/core/: __init__.py  cache.py  log_context.py  logging.py  settings.py  tracing.py
src/neuralscope/core/embeddings/: __init__.py
src/neuralscope/core/llm/: __init__.py  model_registry.py  models.py
src/neuralscope/features/: __init__.py
src/neuralscope/features/architecture_validator/domain/entities/: validation.py
src/neuralscope/features/architecture_validator/domain/repository/: validator.py
src/neuralscope/features/code_review/data/repository/: reviewer.py
src/neuralscope/features/code_review/domain/entities/: review.py
src/neuralscope/features/code_review/domain/repository/: reviewer.py
src/neuralscope/features/codebase_qa/data/repository/: qa.py
src/neuralscope/features/codebase_qa/domain/entities/: answer.py
src/neuralscope/mcp/: server.py
src/neuralscope/mcp_server/: __init__.py
src/neuralscope/mlops/: __init__.py
src/neuralscope/sdk/: __init__.py  client.py
tests/: conftest.py
tests/unit/: test_sdk_wiring.py
tests/unit/cli/: test_cli.py
tests/unit/core/: test_mlops.py  test_model_registry.py  test_settings.py
tests/unit/features/architecture_validator/: test_validation.py
tests/unit/features/code_review/: test_review.py  test_use_case.py
tests/unit/features/codebase_qa/: test_qa.py
tests/unit/features/dependency_graph/: test_ast_parser.py  test_build_graph.py  test_impact.py  test_renderer.py
tests/unit/features/documentation/: test_documentation.py
tests/unit/features/health_dashboard/: test_health.py
tests/unit/features/pr_summary/: test_pr_summary.py
tests/unit/features/prompt_studio/: test_prompt_studio.py
tests/unit/features/test_generator/: test_test_gen.py
tests/unit/features/vulnerability_scan/: test_vulnerability.py
tests/unit/mcp/: test_mcp_server.py
(+53 files in other folders)
